JBAS-2282, update the resolveSystemID logic to first look for a mapping for the systemID in the resolver entity map to avoid uncessary URL lookups for well known schemas bundled with jboss.
git-svn-id: https://anonsvn.jboss.org/repos/common/trunk@1369 15291643-af16-0410-b526-a589213603f9